Thu Mar 29 03:14:55 BST 2007  Olly Betts <olly@survex.com>

	* omega.spec.in: Update to handle documentation being installed in
	  $prefix/share/doc/xapian-omega.

Tue Mar 27 21:42:19 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: datarootdir is new in 2.60 too, so use datadir when
	  setting docdir for 2.59.

Mon Mar 26 15:47:53 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Add code to ensure that docdir is set for autoconf
	  2.59 (starting from 2.60, it is defined as standard).
	* Makefile.am: Use docdir for installing docs.  This means that the
	  documentation now goes in $prefix/share/doc/xapian-omega rather
	  than $prefix/share/doc/omega, which is better really.

Sat Mar 24 17:21:32 GMT 2007  Olly Betts <olly@survex.com>

	* query.cc: Prefer static char[] to static char * (gives better
	  generated code).

Sat Mar 24 17:19:18 GMT 2007  Olly Betts <olly@survex.com>

	* omega.cc: Prefer static char[] to static char * (gives better
	  generated code).

Sat Mar 24 17:16:49 GMT 2007  Olly Betts <olly@survex.com>

	* configfile.cc: Prefer static char[] to static char * (gives better
	  generated code).

Thu Mar 22 01:11:52 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Eliminate libtool probe code for f77, gcj, and rc
	  which speeds up configure and knocks 29% off its size.

Tue Mar 06 01:56:00 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Bump version number to 0.9.10 so that snapshots don't
	  look older than releases.

Sun Mar 04 14:42:18 GMT 2007  Olly Betts <olly@survex.com>

	* TODO: Remove entries which have already been done!

Sat Mar 03 02:24:42 GMT 2007  Olly Betts <olly@survex.com>

	* utf8test.cc: Add single utf-8 sequence decoding tests.

Fri Mar 02 00:18:09 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Perform a link test for posix_fadvise to fix
	  misdetection on HP-UX.

Thu Mar 01 21:48:57 GMT 2007  Olly Betts <olly@survex.com>

	* utf8itor.h: Add cast to suppress warning from aCC.
