@@ -1,3 +1,10 @@
+Thu Mar 29 17:22:18 BST 2007  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Index PostScript by converting to PDF with ps2pdf and
+	  then indexing that.  This allows us to index PostScript files
+	  containing Unicode characters outside of iso-8859-1, and also
+	  means we now get metadata from PostScript files.
+
 Thu Mar 29 03:14:55 BST 2007  Olly Betts <olly@survex.com>
 
 	* omega.spec.in: Update to handle documentation being installed in
